--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -5,17 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Codigo</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/geral.css">
 </head>
 <body>
-    <!-- <input type="text" placeholder="Digite a palavra" id="areaTexto">
-    <input type="button" value="Ok" id="btnTexto"> -->
-    <h2>Sua palavra:</h2>
-    <p id="areaTexto">Teste</p>
-    <h2>Sua palavra codificada é:</h2>
-    <p id="palavraCodificada">x</p>
-    <h2>Sua chave é:</h2>
-    <p id="chaveCodificada">x</p>
-    <script src="codigo.js"></script>
+    <main class="container-geral">
+      <section class="frm-texto">
+        <form>
+          <input type="text" placeholder="Digite a palavra" id="areaTexto" class="areaTexto">
+          <button id="btnTexto" class="btnTexto">Codificar</button>
+        </form>
+      </section>
+      <section class="resultado">
+        <h2 class="resultado-tt">Sua palavra:</h2>
+        <p id="palavra-texto"></p>
+        <h2 class="resultado-tt">Sua palavra codificada é:</h2>
+        <p id="palavra-codificada"></p>
+        <h2 class="resultado-tt">Sua chave é:</h2>
+        <p id="chave-texto"></p>
+      </section>
+      <section class="frm-codigo">
+        <form>
+          <input type="text" placeholder="Digite o codigo" id="areaCodigo" class="areaCodigo">
+          <button id="btnCodigo" class="btnCodigo">Descodificar</button>
+        </form>
+      </section>
+        <script src="codigo.js"></script>
+    </main>
 </body>
 </html>
