--- a/projeto/index.html
+++ b/projeto/index.html
@@ -30,15 +30,27 @@
 					</tr>
 					<tr class="paciente">
 						<td class="info-nome">Paulo</td>
-						<td class="info-peso">1000</td>
+						<td class="info-peso">100</td>
 						<td class="info-altura">2.00</td>
+						<td class="info-imc"></td>
+					</tr>
+					<tr class="paciente">
+						<td class="info-nome">Stuart</td>
+						<td class="info-peso">120</td>
+						<td class="info-altura">1.80</td>
+						<td class="info-imc"></td>
+					</tr>
+					<tr class="paciente">
+						<td class="info-nome">Rafael</td>
+						<td class="info-peso">110</td>
+						<td class="info-altura">1.60</td>
 						<td class="info-imc"></td>
 					</tr>
 				</table>
 				<button id="calcula-imcs" class="botao ">Calcular Imcs</button>
 			</section>
 			<section>
-				<h2>Adicionar novo paciente</h2>
+				<h2>Adicionar novo paciente</h2>	
 				<form>
 					<fieldset>
 						<label for="nome">Nome:</label>
@@ -56,6 +68,8 @@
 				</form>
 			</section>
 		</main>
-		<script src="calcula-imc.js"></script>
+		<script src="precorre.js"></script>
+        <script src="calcula-imc.js"></script>
+        <script src="imprime-nome.js"></script>
 	</body>
 </html>
