--- a/mascara/index.html
+++ b/mascara/index.html
@@ -7,7 +7,7 @@
   <title>Mascara</title>
 </head>
 <body>
-  <input type="text" id="input">
+  <input type="text" id="input" data-mascara="mascara">
   <script src="index.js"></script>
 </body>
 </html>
