--- a/mascara/index.html
+++ b/mascara/index.html
@@ -7,8 +7,8 @@
   <title>Mascara</title>
 </head>
 <body>
-  <input type="text" data-mascara="padrao.cpf">
-  <input type="text" data-mascara="padrao.data">
+  <input type="text" data-mascara="cpf">
+  <input type="text" data-mascara="data">
   <script src="index.js"></script>
 </body>
 </html>
